k8s/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' 
spec:
  rules:
    # - host: abdm.hello.world
    - http:
        paths:
          - path: /
            backend:
              serviceName: app-svc
              servicePort: 3000
